--- a/selectPicture/Info.plist
+++ b/selectPicture/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>拍新的照片</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>從相簿選取圖片</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
